added same prop

--- a/Extensions/Extensions.csproj
+++ b/Extensions/Extensions.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	  <CLRSupport>false</CLRSupport>
+	  <CLRSupport>false</CLRSupport>
   </PropertyGroup>
 
 </Project>
