added same prop

--- a/Extensions/Extensions.csproj
+++ b/Extensions/Extensions.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
 	  <CLRSupport>false</CLRSupport>
 	  <CLRSupport>false</CLRSupport>
+	  <CLRSupport>false</CLRSupport>
   </PropertyGroup>
 
 </Project>
